<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/about_activity_padding"
    android:paddingRight="@dimen/about_activity_padding"
    tools:context="com.bitshifters.rohit.popcorn.AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:text="@string/app_name_secondary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:text="@string/app_name"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/detail_text"
            android:text="@string/about_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:text="@string/developed_by"/>
        <TextView
            android:id="@+id/tvDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textAlignment="textEnd"
            android:text="@string/developer"
            android:textColor="@color/red_700"/>
        <ImageView
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:background="@drawable/themoviedborg_banner"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:alpha="0.4"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
