<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="com.bitshifters.rohit.popcorn.MovieDetailFragment"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp">

            <ImageView
                android:id="@+id/ivPosterPortrait"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:scaleType="centerCrop"/>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="22sp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RatingBar
                    android:id="@+id/rbVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="@integer/number_of_stars"
                    style="?android:attr/ratingBarStyleSmall"
                    android:stepSize="0.1"
                    android:isIndicator="false"/>

                <TextView
                    android:id="@+id/tvVote"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"/>

            </LinearLayout>

            <!-- For Stage 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/star_big_off"/>


                <TextView
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/add_to_favorites" />

            </LinearLayout>

    </LinearLayout>




    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_overview"
            android:textSize="16sp"
            android:padding="10dp"/>
    </android.support.v7.widget.CardView>

</LinearLayout>